# ShopThat-Demo

./: .gitattributes  .gitignore  README.md  auth-config.js  campaigns.html  dashboard.html  financials.html  index.html  internals.html  keywords-manage.html  keywords.html  login.html  netlify.toml  open-source.html  package-lock.json  products.html  publishers.html  settings.html
Archive/: some.json  (+3 more)
Archive/pangee-demo/backend/parser/: pyproject.toml
Archive/pangee-demo/backend/parser/app/: config.yaml  evaluation.py  logger.py  main.py  retrieval.py  settings.py
Archive/pangee-demo/backend/parser/app/mlruns/0/: meta.yaml
Archive/pangee-demo/backend/parser/app/mlruns/0/de8e2517c6fc4c65a41b34725f188d97/artifacts/: assistant_response.txt  evaluation.txt
Archive/pangee-demo/backend/parser/app/mlruns/0/de8e2517c6fc4c65a41b34725f188d97/tags/: mlflow.source.name
Archive/pangee-demo/backend/parser/app/prompts/: system_prompt.txt
Demo/shopTHAT/backend/parser/: pyproject.toml  requirements.txt
Demo/shopTHAT/backend/parser/app/: config.yaml  evaluation.py  llm.py  main.py  model_experimentation.py  retrieval.py  settings.py
Demo/shopTHAT/backend/parser/app/mlruns/0/4854882ed5bb44d2af1a6d20a825492f/artifacts/: assistant_response.txt  evaluation.txt
Demo/shopTHAT/backend/parser/app/mlruns/0/49bf5918e27f49499dea066864c9a3a3/artifacts/: assistant_response.txt  evaluation.txt
Demo/shopTHAT/backend/parser/app/mlruns/0/de8e2517c6fc4c65a41b34725f188d97/: meta.yaml
Demo/shopTHAT/backend/parser/app/mlruns/0/de8e2517c6fc4c65a41b34725f188d97/metrics/: similarity_score
Demo/shopTHAT/backend/parser/app/prompts/: judge_prompt.txt  system_prompt.txt
Demo/shopTHAT/backend/parser/app/routers/: campaigns.py
Demo/shopTHAT/backend/parser/data/campaigns/: Core_Values_Campaign.json  Kusama_Campaign.json  Murakami_Campaign.json
Demo/shopTHAT/backend/parser/data/processed/: campaign_mapping.xlsx  core_values_product_mapping.json  mapped_metadata_processed.pkl  mapped_metadata_processed.xlsx
Demo/shopTHAT/backend/parser/data/raw/spreadsheets/: keywords_articles_and_products.xlsx
Demo/shopTHAT/backend/parser/faiss/: clip_test.py  faiss_metadata_storage.py  faiss_retrieval.py  faiss_vectorstore_metadata_content.pkl  image_scrapper.py
Demo/shopTHAT/backend/parser/faiss/faiss_store_metadata_content/: index.faiss  index.pkl
Demo/shopTHAT/backend/parser/faiss/faiss_stores/faiss_all_campaigns_text/: index.faiss  index.pkl
Demo/shopTHAT/backend/parser/faiss_local_stub/: clip_image.index
Demo/shopTHAT/backend/parser/faiss_local_stub/faiss_store_metadata_content/: index.pkl
Demo/shopTHAT/backend/parser/faiss_local_stub/faiss_stores/faiss_all_campaigns_text/: index.faiss  index.pkl
Demo/shopTHAT/backend/parser/scripts/: core_value_keywords_product_mapping.py  source_keyword_mapping.py
shopTHAT_V1/graph_rag_backend/: .env  SETUP.md  bio_art_kusama_exhibits_chat_logs.xlsx  chat_log.xlsx  kusama_art_bio_none_chat_logs.xlsx  pyproject.toml  run_server.py  test-groq-key.py  test_neo4j_simple.py
shopTHAT_V1/graph_rag_backend/faiss_stores/faiss_all_campaigns_text/: embeddings.npy  ids.json  index.faiss
shopTHAT_V1/graph_rag_backend/src/backend/: campaigns.py  chat_session.py  config.yaml  embed_mapping.py  graphdb.py  keyword_resources.py  keywords.py  llm.py  main.py  retrieval.py  settings.py  system_prompt.txt
shopTHAT_V1/graph_rag_backend/src/campaigns_manifest/: kusama_campaign.json
(+413 files in other folders)
