[project]
name = "pyparser-toml"
version = "0.1.0"
description = ""
authors = [
    { name = "Lokesh Katuri" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "beautifulsoup4==4.13.4",        
    "bs4==0.0.2",                    
    "faiss-cpu==1.11.0",             
    "sentence-transformers==3.4.1",  
    "yake==0.4.8",                                     
    "numpy==2.2.0",                  
    "requests==2.32.3",              
    "groq==0.23.1",                
    "tenacity==9.1.2",               
    "pandas==2.2.3",                
    "openpyxl==3.1.5",              
    "selenium==4.31.0",              
    "webdriver-manager==4.0.2",      
    "langchain==0.3.24",             
    "langchain-community==0.3.23",   
    "unstructured==0.17.2",         
    "scrapy==2.12.0",                
    "langchain-huggingface==0.1.2", 
    "mlflow==2.22.0",
    "pydantic",
    "pydantic-settings"  ,
    "fastapi",
                  
]

[tool.poetry]
packages = [{ include = "pyparser" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
